syntax = "proto3";
//package code generated by schemakit  DO NOT EDIT.
package skema.test;
option go_package="skema/test";

import "google/api/annotations.proto";
import "validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

service Test {
    rpc Heathcheck (HealthcheckRequest) returns (HealthcheckResponse){
        option (google.api.http) = {
          get: "/api/healthcheck"
        };
    }

    rpc Helloworld (HelloRequest) returns (HelloReply) {
        option (google.api.http) = {
            post: "/api/helloworld"
            body: "*"
        };
    };
}

message HealthcheckRequest {
    string msg = 1;
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        example: "{\"msg\": \"heathcheck\"}"
    };
}

message HealthcheckResponse {
    string result = 1;
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        example: "{\"result\": \"ok\"}"
    };
}

message HelloRequest {
    string msg = 1 [(validate.rules).string.min_len = 3];
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        example: "{\"msg\": \"hello world\"}"
    };
}

message HelloReply {
    string msg = 1;
    string code = 2;
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        example: "{\"msg\": \"hello world from server\", \"code\":\"0\"}"
    };
}